adding more spacing style

--- a/styles/main.css
+++ b/styles/main.css
@@ -10,4 +10,24 @@ body {
 
 .link {
   color: green;
+  padding-top: 1em;
+  display: inline-block;
+}
+
+.about {
+  color: grey;
+  padding-top: 4em;
+}
+
+.results {
+  padding-top: 1em;
+}
+
+.container {
+  padding-top: 1em;
+}
+
+#btn {
+  color: white;
+  background-color: red;
 }
